--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "apollo-server": "^3.6.3",
     "bcryptjs": "^2.4.3",
